# termix

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  project_outline.txt
src/: main.cpp
src/api/: api_client.cpp  api_client.h  openai_client.cpp  openai_client.h
src/gui/: mainwindow.cpp  mainwindow.h
src/utils/: config.cpp  config.h
